// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VInput VInput dDefault render. Snapshot test 1`] = `
<div
  className="container"
>
  <input
    className="sc-AxjAm LIrVh input_element "
    onBlur={[Function]}
    onFocus={[Function]}
  />
  <label
    className="sc-AxirZ iyFEor label_element"
  />
</div>
`;

exports[`VInput VInput rendering with props type='number'. Snapshot test 1`] = `
<div
  className="container"
>
  <input
    className="sc-AxjAm LIrVh input_element some_classname"
    name="age"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="age"
    type="number"
  />
  <label
    className="sc-AxirZ iyFEor label_element"
  >
    age
  </label>
</div>
`;

exports[`VInput VInput rendering with props. Snapshot test 1`] = `
<div
  className="container"
>
  <input
    className="sc-AxjAm LIrVh input_element some_classname"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="heeey"
  />
  <label
    className="sc-AxirZ iyFEor label_element"
  >
    heeey
  </label>
</div>
`;
